integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_and_set_collection_v2_add_asset_not_in_collection__mint.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 850
expression: asset
---
{
  "interface": "V1_NFT",
  "id": "9HYtHehrvfADZzzqWy7uYGPPK1xsYRHAyXo6z89Pxsd7",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "FNrURKHdgVRVLWtfmwLkt1wAMH2jCRQdkr8XSh3uzGW7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "GmDqet7MNo1a2jTY5evpBbnPf9Hcw8djNA5pXAZYWXwJ",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "4TaxWqXwU65Nwt3ZQxSN5F5wJiXojzfuB5MoTamMqhdB",
    "tree": "4DuCkRnPZNBmENf2WXHjRLghwAs4CzmqjeJjbtLiiHeU",
    "seq": 1,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "7vzubXSzNDPu4jWgN1bu2AHqxbrJPqpDx5SSpeT2DGMG"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
