integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_and_set_collection_v2_add_asset_not_in_collection__set_collection.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 865
expression: asset_after_transfer
---
{
  "interface": "V1_NFT",
  "id": "9HYtHehrvfADZzzqWy7uYGPPK1xsYRHAyXo6z89Pxsd7",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "FNrURKHdgVRVLWtfmwLkt1wAMH2jCRQdkr8XSh3uzGW7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "FS2h3TGpjynr3Ms6XJ3USB9BicLWkc2yejCTK7gUTcHj",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "GQ7xoM6jbSeTTH98AqPfHC1mtKfLErWkDF1ZwJXL5G84",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "5VovXJncyYPhH18Fm9mUdRgEFE3CY5HSQcD9HyjRxLPj",
    "tree": "4DuCkRnPZNBmENf2WXHjRLghwAs4CzmqjeJjbtLiiHeU",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "EVHJyhM5mTsVWpw62KnrSoBTB7rPaRcWay6fZr1iEsru",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "7vzubXSzNDPu4jWgN1bu2AHqxbrJPqpDx5SSpeT2DGMG"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
